--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
 	"semi": true,
 	"singleQuote": true,
 	"trailingComma": "es5",
-	"printWidth": 100,
-	"bracketSpacing": true
+	"printWidth": 120
 }
