--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "cekresume",
-	"version": "0.0.1",
+	"version": "1.0.0",
+	"author": "Nourman Hajar",
+	"license": "MIT",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
@@ -29,6 +31,7 @@
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
+		"svelte-scrollto": "^0.2.0",
 		"tailwindcss": "^3.0.23",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
@@ -37,6 +40,7 @@
 		"country-code-lookup": "^0.0.20",
 		"node-html-parser": "^5.3.3",
 		"svelte-file-dropzone": "^1.0.0-dev.1",
-		"svelte-icons": "^2.1.0"
+		"svelte-icons": "^2.1.0",
+		"svelte-seo": "^1.4.0"
 	}
 }
